dns-checker.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dns-checker
  namespace: default
spec:
  containers:
  - name: dns-checker
    image: busybox
    command: ["sh", "-c", "sleep 3600"]
    imagePullPolicy: IfNotPresent
  restartPolicy: Never
