test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: seed-test
spec:
  containers:
  - name: test-container
    image: local-test-image:latest
    imagePullPolicy: IfNotPresent
    command: ["sh", "-c", "sleep 3600"]
