bootnode-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bootnode-service
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: opticonomy-node
  ports:
  - name: p2p
    port: 30333
    targetPort: 30333
