http-rpc-node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rpc-node-service
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: opticonomy-node
  ports:
  - name: rpc
    port: 9953
    targetPort: 9953
