nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rpc-proxy-service
spec:
  type: LoadBalancer
  selector:
    app: rpc-proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
