proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rpc-proxy-service
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: rpc-proxy
  ports:
    - name: rpc
      port: 9953
      targetPort: 9953
    - name: ws
      port: 9964
      targetPort: 9964
