ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rpc-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: wsstestnet.opticonomy.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opticonomy-node-rpc
                port:
                  number: 9953
  tls:
    - hosts:
        - wsstestnet.opticonomy.com
      secretName: rpc-tls
